[package]
name = "algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libs = { path = "../libs" }

datatypes = { path = "../datatypes" }
utils = { path = "../utils" }
local_nodes = { path = "../local_nodes" }