[package]
name = "concurrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libs = { path = "../libs" }

csv_reader = { path = "../csv_reader" }
concurrent_algorithms = { path = "../concurrent_algorithms" }
utils = { path = "../utils" }

structopt = { version = "0.3.25" }
