[package]
name = "libs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.17" }
itertools = { version = "0.10.1" }
rand = { version = "0.8.4" }
rand_xoshiro = { version = "0.6.0" }
rayon = { version = "1.5.1" }
structopt = { version = "0.3.25" }
