[package]
name = "serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libs = { path = "../libs" }

csv_reader = { path = "../csv_reader" }
serial_algorithms = { path = "../serial_algorithms" }
utils = { path = "../utils" }

structopt = { version = "0.3.25" }
