[package]
name = "serial_algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libs = { path = "../libs" }

algorithms = { path = "../algorithms" }
datatypes = { path = "../datatypes" }
local_nodes = { path = "../local_nodes" }
utils = { path = "../utils" }
